Bug#16693: Missing facet label line wrap in IE

--- a/sass/elements/_facet_browser.scss
+++ b/sass/elements/_facet_browser.scss
@@ -34,7 +34,9 @@
   }
 
   legend {
+    padding-right: 0;
     padding-left: 0;
+    width: 100%;
   }
 
   .form-item {
